Added changes to issues found by findbugs - MAIN CHANGES: added static to final variables, added stringbuilder implementation to program stack, added default to switch statement in program executor